--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=book-tracker-group
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-
+jwt.secretKey=+K2d33f/4VafYLVyb4UfmK1n36ObMX8pL4JxNaAZKOc=
